[Fix] Various code improvements.  - Replaced Stream.collect(Collectors.toList()) with Stream.toList()  - Refactored the ServerUtils#getExtendingClasses(Plugin, Class) method to not leak the JarFile resource.